--- a/mcp-server/config.toml
+++ b/mcp-server/config.toml
@@ -16,6 +16,7 @@ require_auth = false  # Set to true for production
 key = "dev_key_12345"
 name = "Development Key"
 allowed_commands = [
+    "mcp_docjl_create_document",
     "mcp_docjl_list_documents",
     "mcp_docjl_get_document",
     "mcp_docjl_list_headings",
